Updated image in image folder and the code snippet in index.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				<div class="col-lg-3 d-flex ftco-animate align-items-center">
 					<div class="align-self-stretch box text-center p-4 shadow align-items-center">
 						<div class="icon d-flex align-items-center justify-content-center align-items-center">
-							<img src="images/sample.png" alt="Avatar" width="150" height="150"
+							<img src="images/updated_sample.png" alt="Avatar" width="150" height="150"
 								style="border-radius: 25%; margin-top: 20px">
 						</div>
 						<div>
